# signal-provisioning-api

./: Cargo.toml  README.md  build.rs  deny.toml
src/: api_config.rs  device_registration.rs  error.rs  lib.rs  proto.rs  signal_certs.pem
src/crypto/: aes_cbc.rs  mod.rs
src/proto/: device_messages.proto  device_messages.rs  device_name.proto  device_name.rs  sub_protocol.proto  sub_protocol.rs
src/provisioning/: envelope.rs  message.rs  mod.rs  provisioning_uuid.rs  socket.rs  uuid.rs
