[package]
name = "signal-provisioning-api"
version = "0.6.0"
authors = ["Tomas Drtina <tm.drtina@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/tm-drtina/signal-provisioning-api"

[dependencies]
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", tag = "v0.22.2" }
signal-crypto = { git = "https://github.com/signalapp/libsignal.git", tag = "v0.22.2" }

aes = "0.7.4"
subtle = "2.3"
block-modes = "0.8"
hkdf = "0.11"
sha2 = "0.9"
uuid = "1.1.2"

base64 = "0.21"
prost = "0.9"
rand = "0.7.3"

[build-dependencies]
prost-build = "0.9"
